--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "firebase": "^4.11.0",
+    "moment": "^2.22.0",
     "ng2-imageupload": "^1.4.2",
     "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.6",
