--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "ajv": "^5.5.2",
     "ammap3": "^3.21.12",
+    "angular-geocoder": "0.0.18",
     "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "firebase": "^4.11.0",
+    "geocoder": "^0.2.3",
     "moment": "^2.22.0",
     "ng2-imageupload": "^1.4.2",
     "ngx-bootstrap": "^2.0.3",
@@ -41,7 +44,7 @@
     "@types/googlemaps": "^3.30.8",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.108",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
