--- a/package.json
+++ b/package.json
@@ -22,15 +22,20 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/hammerjs": "^2.0.35",
+    "@types/mousetrap": "^1.6.0",
     "ajv": "^5.5.2",
     "ammap3": "^3.21.12",
     "angular-geocoder": "0.0.18",
+    "angular-modal-gallery": "^5.7.1",
     "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "firebase": "^4.11.0",
     "geocoder": "^0.2.3",
+    "hammerjs": "^2.0.8",
     "moment": "^2.22.0",
+    "mousetrap": "^1.6.1",
     "ng2-imageupload": "^1.4.2",
     "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.6",
