--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.22.0",
     "mousetrap": "^1.6.1",
     "ng2-imageupload": "^1.4.2",
+    "ng5-auto-complete": "0.0.8",
     "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
