--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "ng2-imageupload": "^1.4.2",
     "ng5-auto-complete": "0.0.8",
     "ngx-bootstrap": "^2.0.3",
+    "ngx-flip": "^1.0.0",
+    "ngx-slick": "^0.1.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
