--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng5-auto-complete": "0.0.8",
     "ngx-bootstrap": "^2.0.3",
     "ngx-flip": "^1.0.0",
+    "ngx-infinite-scroll": "^6.0.1",
     "ngx-slick": "^0.1.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
