--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ammap3": "^3.21.12",
     "angular-geocoder": "0.0.18",
     "angular-modal-gallery": "^5.7.1",
+    "angular2-infinite-scroll": "^0.3.5",
     "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
@@ -41,6 +42,7 @@
     "ngx-bootstrap": "^2.0.3",
     "ngx-flip": "^1.0.0",
     "ngx-infinite-scroll": "^6.0.1",
+    "ngx-scroll-event": "^1.0.8",
     "ngx-slick": "^0.1.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
